--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-redux": "^5.0.4",
+    "react-scripts": "0.9.5",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
