--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0"
