--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.1.1",
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0"
