--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
@@ -15,8 +16,10 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "jest": "^20.0.4",
     "react-redux": "^5.0.4",
     "react-scripts": "0.9.5",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.6.0"
   },
   "scripts": {
